# LoopSubdivision

./: CMakeLists.txt  README.md
data/: bunny.stl
src/: AlgorithmHelper.cpp  AlgorithmHelper.h  LoopSubdivision.cpp  LoopSubdivision.h  LoopSubdivisionAoS.cpp  LoopSubdivisionAoS.h  LoopSubdivisionSoA.cpp  LoopSubdivisionSoA.h  PairHash.h  main.cpp
